# teleoperation-5g

./: .gitignore  Commands.txt  PROJECT_SUMMARY.md  README.md  demo_interface.html  local_server.py  requirements.txt  simple_web_server.py  start_ros_system.sh  start_system.bat  start_system.py  start_web.bat  start_web.py  start_web_server.bat
docs/: technical_guide.md
src/network_simulator/: package.xml  setup.py
src/network_simulator/network_simulator/: __init__.py  network_simulator.py
src/network_simulator/resource/: network_simulator
src/remote_interface/: package.xml  setup.py
src/remote_interface/remote_interface/: __init__.py  config.py  ros2_web_bridge.py  web_server.py
src/remote_interface/web/: index.html  joystick.js  main.js  styles.css  telemetry.js  websocket.js
src/remote_interface/web/.next/: trace
src/remote_interface/web/.next/cache/: .rscinfo
src/remote_interface/web/.next/cache/webpack/client-development/: index.pack.gz.old
src/remote_interface/web/.next/server/: server-reference-manifest.json  webpack-runtime.js
src/remote_interface/web/.next/server/app/: page.js  page_client-reference-manifest.js
src/remote_interface/web/.next/server/vendor-chunks/: @radix-ui.js  @swc.js  class-variance-authority.js  clsx.js  geist.js  lucide-react.js  next.js  tailwind-merge.js
src/remote_interface/web/.next/static/chunks/: _app-pages-browser_node_modules_next_dist_client_dev_noop-turbopack-hmr_js.js  app-pages-internals.js  webpack.js
src/remote_interface/web/.next/types/app/: layout.ts  page.ts
src/remote_interface/web/app/: page.tsx
src/remote_interface/web/components/: battery-bar.tsx  drone-arm-control.tsx  drone-telemetry.tsx  glass-card.tsx  joystick.tsx  ros2-joystick.tsx  sparkline.tsx
src/remote_interface/web/hooks/: useROS2WebSocket.ts
(+15 files in other folders)
